--- a/MedSys/Properties/Resources.resx
+++ b/MedSys/Properties/Resources.resx
@@ -130,6 +130,9 @@
   <data name="btnExameSelect" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\btnExameSelect.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="btn_colaborador2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\btn_colaborador2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="paciente" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\paciente.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -142,29 +145,26 @@
   <data name="medsys_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\medsys_logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="background_login" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\background_login.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="btn_prontuario" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\btn_prontuario.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="btnInternacaoSelect" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\btnInternacaoSelect.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="CADASTRO_ENFERMEIRO_azul52" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\CADASTRO_ENFERMEIRO_azul52.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="background_login" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\background_login.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="btnInternacaoSelect" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\btnInternacaoSelect.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="btnConsulta" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\btnConsulta.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="btnEstoqueSelect" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\btnEstoqueSelect.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="cadastrarbutton2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\cadastrarbutton2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="btnEstoque" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\btnEstoque.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="btnInternacao" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\btnInternacao.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="btn_colaborador2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\btn_colaborador2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="CADASTRO_ENFERMEIRO71" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\CADASTRO_ENFERMEIRO71.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="cadastrarbutton5" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\cadastrarbutton5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -175,6 +175,9 @@
   <data name="btnListaColaboradores" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\btnListaColaboradores.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="btnCadastrarMedicamentoSelect" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\btnCadastrarMedicamentoSelect.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="cadastrarbutton4" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\cadastrarbutton4.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -184,8 +187,8 @@
   <data name="CADASTRO_ENFERMEIRO_azul5" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\CADASTRO_ENFERMEIRO_azul5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="cadastrarbutton3" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\cadastrarbutton3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="btnInternacao" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\btnInternacao.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="btnCadastrarMedico" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\btnCadastrarMedico.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -202,14 +205,20 @@
   <data name="imagemcadastro" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\imagemcadastro.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="btnCadastrarEnfermeiro" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\btnCadastrarEnfermeiro.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="cadastrarbutton2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cadastrarbutton2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="btnCadastrarMedicamento" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\btnCadastrarMedicamento.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="CADASTRO_ENFERMEIRO7" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\CADASTRO_ENFERMEIRO7.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="CADASTRO_ENFERMEIRO71" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\CADASTRO_ENFERMEIRO71.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="btnConsulta" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\btnConsulta.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="btnCadastrarEnfermeiro" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\btnCadastrarEnfermeiro.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="btnCadastrarPaciente" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\btnCadastrarPaciente.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -217,22 +226,19 @@
   <data name="g7" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\g7.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="estoque" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\estoque.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="g1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\g1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="cadastrarbutton" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\cadastrarbutton.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="btnCadastrarMedicamento" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\btnCadastrarMedicamento.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="cadastrarbutton3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cadastrarbutton3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="btnCadastrarMedicamentoSelect" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\btnCadastrarMedicamentoSelect.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="btnEstoque" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\btnEstoque.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="btnEstoqueSelect" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\btnEstoqueSelect.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="cadastrarbutton6" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cadastrarbutton6.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
