--- a/MedSys/Properties/Resources.resx
+++ b/MedSys/Properties/Resources.resx
@@ -130,9 +130,6 @@
   <data name="btnExameSelect" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\btnExameSelect.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="btn_colaborador2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\btn_colaborador2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="paciente" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\paciente.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -141,6 +138,9 @@
   </data>
   <data name="medsys_neon_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\medsys_neon_logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pngtree-cartoon-blue-magnifying-glass-illustration-image_1214215-removebg-preview" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pngtree-cartoon-blue-magnifying-glass-illustration-image_1214215-removebg-preview.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="medsys_logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\medsys_logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -157,14 +157,17 @@
   <data name="btnInternacaoSelect" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\btnInternacaoSelect.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="cadastrarbutton2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cadastrarbutton2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="btnEstoqueSelect" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\btnEstoqueSelect.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="btnEstoque" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\btnEstoque.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="CADASTRO_ENFERMEIRO71" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\CADASTRO_ENFERMEIRO71.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="btn_colaborador2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\btn_colaborador2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="cadastrarbutton5" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\cadastrarbutton5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -205,8 +208,14 @@
   <data name="imagemcadastro" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\imagemcadastro.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="cadastrarbutton2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\cadastrarbutton2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="g1int" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\g1int.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="cadastrarbutton3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cadastrarbutton3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="btnCadastrarEnfermeiro" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\btnCadastrarEnfermeiro.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="btnCadastrarMedicamento" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\btnCadastrarMedicamento.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -217,8 +226,8 @@
   <data name="btnConsulta" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\btnConsulta.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="btnCadastrarEnfermeiro" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\btnCadastrarEnfermeiro.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="cadastrarbutton9" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cadastrarbutton9.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="btnCadastrarPaciente" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\btnCadastrarPaciente.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -226,19 +235,34 @@
   <data name="g7" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\g7.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="CADASTRO_ENFERMEIRO71" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\CADASTRO_ENFERMEIRO71.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="cadastrarbutton7" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cadastrarbutton7.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="estoque" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\estoque.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pngtree-cartoon-blue-magnifying-glass-illustration-image_1214215-removebg-preview1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pngtree-cartoon-blue-magnifying-glass-illustration-image_1214215-removebg-preview1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="g1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\g1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="cadastrarbutton8" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cadastrarbutton8.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="cadastrarbutton" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\cadastrarbutton.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="cadastrarbutton3" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\cadastrarbutton3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="cadastrarbutton10" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cadastrarbutton10.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="cadastrarbutton6" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\cadastrarbutton6.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="cadastrarbutton10" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cadastrarbutton11.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
