--- a/MedSys/Properties/Resources.resx
+++ b/MedSys/Properties/Resources.resx
@@ -127,6 +127,9 @@
   <data name="btn_colaborador" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\btn_colaborador.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="btnCadastrarPaciente" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\btnCadastrarPaciente.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="btnExameSelect" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\btnExameSelect.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -157,8 +160,8 @@
   <data name="btnInternacaoSelect" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\btnInternacaoSelect.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="cadastrarbutton2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\cadastrarbutton2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="g1int" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\g1int.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="btnEstoqueSelect" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\btnEstoqueSelect.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -208,14 +211,8 @@
   <data name="imagemcadastro" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\imagemcadastro.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="g1int" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\g1int.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="cadastrarbutton3" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\cadastrarbutton3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="btnCadastrarEnfermeiro" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\btnCadastrarEnfermeiro.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="cadastrarbutton2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cadastrarbutton2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="btnCadastrarMedicamento" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\btnCadastrarMedicamento.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -226,11 +223,14 @@
   <data name="btnConsulta" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\btnConsulta.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="btnCadastrarEnfermeiro" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\btnCadastrarEnfermeiro.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="cadastrarbutton9" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\cadastrarbutton9.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="btnCadastrarPaciente" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\btnCadastrarPaciente.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="g1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\g1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="g7" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\g7.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -247,8 +247,8 @@
   <data name="pngtree-cartoon-blue-magnifying-glass-illustration-image_1214215-removebg-preview1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\pngtree-cartoon-blue-magnifying-glass-illustration-image_1214215-removebg-preview1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="g1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\g1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="cadastrarbutton3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cadastrarbutton3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="cadastrarbutton8" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\cadastrarbutton8.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -257,12 +257,27 @@
     <value>..\Resources\cadastrarbutton.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="cadastrarbutton10" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\cadastrarbutton10.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Resources\cadastrarbutton11.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="cadastrarbutton6" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\cadastrarbutton6.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="cadastrarbutton10" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\cadastrarbutton11.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="btnCadastrarEnfermeiroSelect" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\btnCadastrarEnfermeiroSelect.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="btnCadastrarMedicoSelect" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\btnCadastrarMedicoSelect.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="btnCadastrarPacienteSelect" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\btnCadastrarPacienteSelect.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="btnCadastrarRecepcionistaSelect" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\btnCadastrarRecepcionistaSelect.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="btnListaColaboradoresSelect" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\btnListaColaboradoresSelect.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="btnListaPacienteSelect" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\btnListaPacienteSelect.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
